# assistant-fastapi-demo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  get_token.sh  pyproject.toml  start.sh  test.sh  test_service.sh
app/: config.py  conftest.py  custom_logging.py  main.py  otel.py
app/middlewares/: auth.py
app/middlewares/logging/: custom_logging.py  middleware.py
app/routes/: assistance.py  assistance_test.py  heartbeat.py  heartbeat_test.py
app/routes/assistance/: __init__.py  __test.py  channel_configuration.py  models.py  router.py  router_test.py  service.py  service_test.py  slack.py
app/routes/assistance/channels/: mail.py  slack.py  slack_test.py
